syntax = "proto3";
package enviaorden;

option go_package = "github.com/example/path/gen;enviaorden";

message Message {
    string body = 1;
}

service EnviaOrdenService{
    rpc EnviaOrden(Message) returns (Message) {}
}